# HexShare

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/adapters/: __init__.py  jwt_token.py  memory_storage.py  noop_event_bus.py  postgres_storage.py
app/adapters/access_control/: __init__.py  edge.py  hybrid.py  pdp.py
app/adapters/auth/: __init__.py  hex_iam.py
app/adapters/authz/: __init__.py  claims.py
app/adapters/flow_state/: signed_jwt.py
app/adapters/oidc/: hexiam_client.py
app/adapters/persistence/: __init__.py  postgres_storage.py
app/adapters/policy_evaluator/: __init__.py  hex_iam_policy.py
app/api/: auth_oidc.py  router.py  user.py
app/api/dependencies/: services.py
app/auth/: __init__.py  share_token_auth.py  tenant_auth.py
app/core/: authz.py
app/domain/: __init__.py  models.py
app/infra/: bootstrap.py  factories.py
app/ports/: __init__.py  access_control.py  authn.py  authz.py  event_bus_port.py  flow_state.py  oidc_client.py  policy_evaluator.py  storage_port.py  token_port.py
app/services/: __init__.py  analytics_service.py  document_service.py  link_service.py  oidc_service.py
